# candidate-check

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  MODULES.md  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_risk_fields.py  0003_documents.py
app/: adjudication.py  auth.py  auth_jwt.py  checks.py  config.py  db.py  main.py  models.py  routes_api.py  routes_hr.py  schemas.py  storage.py  worker.py
app/captcha/: solver.py
app/connectors/: base.py  efrsb.py  fssp.py  inn.py  inoagents.py  kad.py  npd.py  opensanctions.py  passport_mvd.py  rdl.py  registry.py  rnp_44.py  rosfinmon.py  sudact.py
app/passport/: recognizer.py
app/scripts/: create_user.py  refresh_opensanctions.py  refresh_rosfinmon.py  set_password.py
app/static/: style.css
app/templates/: base.html  candidate.html  candidates.html  login.html  new_candidate.html
config/: adjudication.yaml
deploy/: install_ubuntu.sh
docs/: README.md  api.md  architecture.md  connectors.md  deployment.md  security.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: documents-section.tsx  layout.tsx  passport-uploader.tsx  protected.tsx  theme.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  empty.tsx  input.tsx  label.tsx  (+2 more)
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: candidate-detail.tsx  candidate-new.tsx  candidates-list.tsx  login.tsx
frontend/src/store/: auth.ts
services/captcha-solver/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/captcha-solver/app/: main.py
services/passport-ocr/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/passport-ocr/app/: main.py  parser.py
templates/: README.md  alembic_migration_template.py  connector_template.py  react_page_template.tsx  refresh_script_template.py
tests/: conftest.py  test_adjudication.py  test_efrsb.py  test_inn.py  test_opensanctions.py  test_rdl.py  test_rosfinmon.py
